data/all_generated_tests/raw_wast_tests/call_InvalidorInconsistentControlFlowGraph_3592.wast
;; 1. **Test Description**:    - **Constraint Checked**: Argument Type Mismatch    - **CFG Relevance**: Tests whether the function call properly checks and transfers arguments with mismatched types.    - **Expected Behavior**: Trigger arity mismatch error or type error in Wizard Engine when argument types do not match the expected function signature in the call instruction.

(assert_invalid
  (module
    (type $t (func (param i32) (result i32)))
    (func $test (call 0 (i64.const 42)))
    (func (type $t) (i32.const 0))
  )
  "type mismatch"
)